# Study

C++/HW2R/: CMakeLists.txt
C++/LW2/: CMakeLists.txt
C++/LW2/main/: cross_cor.c  cross_cor.h  decode.c  decode.h  main.c  main.exp  main.lib  run.txt  tst  tst.cpp
C++/LW3/: bucket_storage.hpp
Data Analise/Lab1/: class_mapping.json  data.csv  data.tsv  data.txt  data2.tsv  data2.txt  mappings.json  merged_output.tsv  tanks_data.arff  tanks_data.json
Data Analise/Lab2/: data.csv  data_cleaned.csv  run.py  trim_csv.py
Data Analise/Lab3/: btc_1d_data_2018_to_2025.csv  finalTest.py  text.txt
Data Analise/Lab4/: test.py  text.txt
java-advanced-2025-new/__Test__Walk__/: test10_oneEmptyFile().in  test15_tenEmptyFiles().in  test20_smallRandomFiles().in  test21_mediumRandomFiles().in  test22_largeRandomFiles().in  test23_veryLargeFile().in  test30_missingFiles().in  test31_invalidFiles().in  test40_errorReading().in  test45_partiallyMissingFiles().in  test46_filesAndDirs().in  test50_whitespaceSupport().in  test51_dirSupport().in  test52_dirsSupport().in  test53_dirsHash().in  test55_chineseSupport().in  test56_emojiSupport().in  test63_invalidFiles().in
mpp-2025/casn/: .solution  README.md
mpp-2025/faa-queue/: .solution  build.gradle.kts
mpp-2025/fc-queue/: .solution  build.gradle.kts
mpp-2025/fine-grained-bank/: README.md  build.gradle.kts
mpp-2025/lamport-lock-fail/: .solution  README.md  build.gradle.kts  solution.txt
mpp-2025/lock-free-bank/: .solution  build.gradle.kts
mpp-2025/mcs-lock/: .solution  README.md  build.gradle.kts
(+342 files in other folders)
